@@ -205,7 +205,16 @@ RQuery::$defaultFilters['rule']['snathost']['operators']['has.from.query'] = Arr
 
         return false;
     },
-    'arg' => true
+    'arg' => true,
+    'help' => 'example: \'filter=(snathost has.from.query subquery1)\' \'subquery1=(netmask < 32)\'',
+);
+RQuery::$defaultFilters['rule']['snathost.count']['operators']['>,<,=,!'] = Array(
+    'eval' => "\$object->snathosts->count() !operator! !value!",
+    'arg' => true,
+    'ci' => Array(
+        'fString' => '(%PROP% 1)',
+        'input' => 'input/panorama-8.0.xml'
+    )
 );
 RQuery::$defaultFilters['rule']['dnathost']['operators']['has'] = Array(
     'eval' => function($object, &$nestedQueries, $value) {
