@@ -21,6 +21,7 @@ address-edit: new action split-large-address-group
 address-edit: new action AddToGroup
 rules-edit: new 'filter=(service has.value.only [443])'
 rules-edit: new 'filter=(snathost has.from.query subquery1)' 'subquery1=([all filters possible from address-edit])'
+rules-edit: new 'filter=(snathost.count - >,<,=,!)'
 address-merger: introduce argument debugapi and exportcsv | which print out per object value the objects replaced by the kept one | improve output for ancestor
 service-merger: introduce new dupalgorithm sameDstSrcport
 service-edit: new filter (value string.eq [DstPort])
